Fixed font spacing and added slider

--- a/src/Styling/EpicEarth.css
+++ b/src/Styling/EpicEarth.css
@@ -13,9 +13,24 @@
 }
 .earth-image{
   /* width: 100%; */
-  height: 100%;
+  height: 80%;
 }
 
+.false-button{  
+  color: rgb(255, 255, 255) !important;
+  position: fixed !important; 
+  margin: auto;
+  top: 10vh;
+  background-color: red !important
+}
+
+.true-button{  
+  color: rgb(255, 255, 255) !important;
+  position: fixed !important; 
+  margin: auto;
+  top: 10vh;
+  background-color: green !important
+}
 
 .icons{
   color: white !important;
@@ -37,11 +52,15 @@
     height: 50%;
   }
 
+  .button{
+    top: 15vh;
+  }
+
 }
 
 @media only screen and (max-width:350px){
   .earth-image{
-    height: 30%;
+    height: 35%;
   }
 
 }
