--- a/src/Styling/Homepage.css
+++ b/src/Styling/Homepage.css
@@ -1,4 +1,8 @@
 .homepage-container{
   min-height: 100vh;
   height: 100%;
+  background-image: url('https://images.unsplash.com/photo-1506318137071-a8e063b4bec0?ixlib=rb-1.2.1&q=80&fm=jpg&crop=entropy&cs=tinysrgb');
+  overflow: hidden;
+  background-position: center;
+  
 }
